--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# DEV TEST
+t.py
+*test.py
+config.json
+
+# IDE
+.idea
+.vscode
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
