--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
 PYTHON=/usr/bin/python3
 PYTHON_SSR=/path/to/shadowsocksr/shadowsocks/local.py
-SOCKS5_PROXY=127.0.0.1:1080
+HTTP_PROXY=socks5://127.0.0.1:1080
+HTTPS_PROXY=socks5://127.0.0.1:1080
